css/main.css
body {
	background-color: white;
}

h1 {
	font-family: 'Playfair Display';
	padding: 0 0 .2em 0;
	margin: 0;
	font-style: italic;
	font-weight: 900;
}

a {
	color: black;
	transition-delay: 0s;
	transition-duration: 0.2s;
	transition-property: all;
	transition-timing-function: linear;
	text-decoration: none;
	font-family: 'Raleway', sans-serif;
	font-size: 1.1em;
	line-height: 1em;
	padding: 0;
	margin: 0;
}

p {
	font-size: 1.1em;
	font-family: 'Raleway', sans-serif;
	line-height: 1em;
	padding: 0;
	margin: 0;
}

a:hover {
	color: red;
}

p, a, span, h1, h2, h3, h4, h5, h6 {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-rendering: optimizelegibility;
}

header {
	width: 100vw;
	display: flex;
	align-content: stretch;
	position: fixed;
	top: 20px;
	left: 0;
}

header a {
	padding-left: 20px;
	margin-top: 20px;
}

header .subtitle {
	opacity: .6;
	padding-left: 20px;

}

header div {
	flex-grow: 1;
}

nav {
	float: right;
}

nav a {
	margin-right: 20px;
	padding-left: 0;
}

.bg_logo {
	max-width: 30%;
}


div#about {
	max-width: 675px;
	margin: 0 10% 0 10%;
	padding-top: 40vh;
}

div#profile {
	display: flex;
	flex-direction: column;
	position: absolute;
	width: 50vw;
	height: 100%;
	top: 0;
	right: 10%;
	z-index: -1;
	justify-content: center;
}

div#profile div {
	max-height: 90vh;
	min-height: 500px;
	max-width: 50vw;
	overflow: hidden;
}

div#profile div img {
	height: auto;
	width: 100%;
}


section#intro {
	height: 100vh;
}

